--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,6 @@ body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
-    
 }
 .header{
     display: flex;
@@ -100,6 +99,6 @@ body{
     height: 20px;
     width:100%;
 }
-.grayText{
+.gray-text{
     color: gray;
 }
